# gemini-cli-chatbot

./: Cargo.toml  README.md
src/: ai.rs  cli.rs  config.rs  error.rs  main.rs
